--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY = "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"
-GOOGLE_API_KEY = "AIzaSyDVNSpO65hataEQxtkfweLqobdMFpRfbyg"
+GROQ_API_KEY = "Insert your Key"
+GOOGLE_API_KEY = "Insert your Key"
